# universal-remote

./: .gitignore  README.md  app.py  get_long_movie_synopses_embeddings.py  get_movie_plot_outlines.py  get_movie_plot_outlines_LONG.py  movie_app.py  movie_averager_app.py  pyproject.toml  requirements.txt  scrape_seinfeld_scripts.py  seinfeld_app.py  seinfeld_embeddings.py  test_movie_embeddings.py  test_movie_embeddings_instructor.py  test_movie_embeddings_openai.py  test_plot_movie_embeddings.py  test_plot_movie_embeddings_instructor.py  test_plot_movie_embeddings_openai.py
app/: config.yaml  logic.py  utils.py
data/: movie_embeddings_pca.pkl  movie_summaries.csv  movie_summaries_LONG.csv  seinfeld_scripts.csv
data/synopses_embeddings/: kd-tree_10_dims.pbz2  kd-tree_20_dims.pbz2  movie_synopses-10_dims.pkl  movie_synopses-20_dims.pkl
movie_averager_app_src/: logic.py
src/: __init__.py  directories.py  embedding_utils.py  imdb_scraper.py  script_database_scraper.py  script_scraper.py
src/script_scraper/: __init__.py  imdb_scraper.py  script_database_scraper.py
